<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.hugo.victor.kwego.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/kwegonianNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNumeroKwegonian" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTraduzir"
            style="@style/BtnPadrao"
            android:text="@string/txtTraduzir" />

        <Button
            android:id="@+id/btnResetar"
            style="@style/BtnPadrao"
            android:text="@string/txtResetar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResultadoRomano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtResultadoRomano"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvRomano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        tools:text="MMXVI" />

    <TextView
        android:id="@+id/tvResultadoDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtResultadoDecimal"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        tools:text="2016" />

</LinearLayout>
